Clean up and some refactoring for less duplication Moved to version 2.0.0 as that is what makes more sense after the python version